klassifikation mehrerer tweets auf einmal, übersicht metriken, anzeige metriken als plot

--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@types/plotly.js": "^2.35.2",
+    "@types/react-plotly.js": "^2.6.3",
     "axios": "^1.7.9",
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
     "papaparse": "^5.5.2",
+    "plotly.js": "^3.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
