--- a/.gitignore
+++ b/.gitignore
@@ -213,6 +213,9 @@ src/2. Classical ML Methods/sven/mixed_dataset/joblib_models
 src/2. Classical ML Methods/sven/archive/archive_models
 
 
+src/3. Deep Learning Approach/imran/models
+src/3. Deep Learning Approach/imran/embeddings
 
 
 
+C:\Users\inteli\iCloudDrive\Studium\Hagen (MA)\3. Semester\Praktika - Web Science\WebScience24\src\3. Deep Learning Approach\imran
